2.3.0 | ??-???-????
===================
    - added assign variables action. Now it's possible to use variables in nexl expressions
    - added separator action
    - added concat() nexl system function to concat primitives, array and objects. Function accepts multiple arguments
    - fixed nexl expressions deep resolution bug ( affects to iterations )
    - added obj(), arr() nexl system functions

2.2.1 | 26-MAY-2017
===================
    - updated release date

2.2.0 | 26-MAY-2017
===================
    - implemented iteration over array elements and object fields in nexl expression as []
    - added new virtual variables to access iteration session : _item_, _index_, _key_, _value_
    - extended + action to concat strings
    - added stringify action ^S
    - added new nexl system functions : setObjKey(), setObjVal(), isEq(), isGT(), isLT(), isGE(), isLE(), isNan(), ifEq(), ifGT(), ifLT(), ifGE(), ifLE(), ifNaN(), isMatch(), ifMatch(), ifMatchEx(), ifNMatch(), ifNMatchEx(), ifNContains(), ifNEquals(), ifNEq(), ifNBool(), ifNStr(), ifNNum(), ifNNull(), ifNUndefined(), ifNNaN(), ifNPrimitive(), ifNArray(), ifNObject(), inc(), dec(), div(), mult(), mod()
    - improved include directive behaviour. Now it includes a source at its place and not globally
    - fixed "include same nexl source" bug
    - added more logs for debug level
    - improved error messages related to nexl source files
    - added short names for :undefined and :null nexl type -> :u and :n

2.1.0 | 29-APR-2017
===================
    - added log management support to produce log file(s), control log levels and roll log file by size


2.0.5 | 01-APR-2017
===================
    - 2.x version is released